# blur-cpp

./: CMakeLists.txt  blur.h  main.cpp  timer.h
doc/: CMakeLists.txt  Doxyfile.in
